# FireGuard

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  FRC_Rev01.py  Kart_test_folium.py  Login.html  README.md  Server.py  dev.sh  docker-compose.yml  fire_risk.py  fire_risk_log.txt  log_output.txt  pyproject.toml
.github/workflows/: Linter.yml  RunTests.yml  super-linter.yml
.history/: .ruff_20250410213446.toml
.history/.github/workflows/: Linter_20250410131954.yml
.history/Backend/App/Controllers/: FireRiskController_20250410133512.py
.history/Backend/App/Helpers/: PasswordAuth_20250409115652.py  PasswordAuth_20250410133512.py
.history/Backend/App/Services/: SupabaseService_20250410131727.py
.history/Backend/Tests/: Test_JwtUtil_20250409115652.py
Backend/: Dockerfile  README.md  pyproject.toml  run.py
Backend/App/: main.py
Backend/App/API/: __init__.py
Backend/App/API/Routes/: Auth.py  FireRisk.py  Generate.py  Register.py  clients.py
Backend/App/Controllers/: AuthController.py  FireRiskController.py
Backend/App/Helpers/: JwtUtils.py  LocationHelper.py  PasswordAuth.py  jwt_utils.py
Backend/App/Services/: SupabaseService.py  supabase_service.py
Backend/Tests/: Test_JwtUtil.py  jwt_test.py
Backend/Tests/Mocks/: SupabaseMock.py
Docs/: APIDoc.md  Setup.md
ExampleCode/: .env  FireRiskPred.py  pyproject.toml
FireGuardProject/: fire_risk_log.txt  pyproject.toml
FireGuardProject/Controllers/: MapController.py  MapHelper.py  Server.py  fire_risk_log.txt  tmp.py
FireGuardProject/Helpers/: FireRiskPredictionHelper.py  MapHelper.py  tmp.py
FireGuardProject/Models/: FireRiskPredictionHelper.py
FireGuardProject/Views/: FireRiskMapStyle.css  Login.html  Logout.js  MapControls.js  fire_risk_map.html  jwt_header.js  map.html
FireGuardProject/fireguardproject/Models/: FireRiskPredictionHelper.py
Frontend/: Dockerfile
Frontend/Public/: index.html  login.html  map.html  register.html
Frontend/Public/css/: index.css  login.css  map.css
Frontend/Public/js/: config.js  fireriskplot.js  login.js  logout.js  map.js  passwordValidator.js  registerUser.js
Frontend/Src/Css/: index.css
Frontend/Src/Js/: auth.js  index.js  login.js  logout.js  map.js
Frontend/Src/Views/: index.html  login.html  map.html
Jonny/: Fire_risk_kart.py
Jonny/frcm/: fire_risk_log.txt  fire_risk_map.html
LabExampleCode/: FireRiskPred.py
docs/: LucidCharts
fastAPI-example/: README.md  pyproject.toml
fastAPI-example/scripts/: Fire_risk_kart.py  Login.html  Server.py  fire_risk_map.html  main.py
fastAPI-example/scripts/static/: Login.html  fire_risk_map.html  jwt_header.js  jwt_test.html  logout.js
fastapi_supabase_example/: README.md  pyproject.toml
fastapi_supabase_example/app/: main.py
fastapi_supabase_example/app/api/routes/: henriktest.py  users.py
fastapi_supabase_example/app/core/: config.py
fastapi_supabase_example/app/services/: __init__.py  supabase_service.py
src/fireguard2/: main.py
src/fireguard2/api/: auth.py  map.py
src/fireguard2/core/: config.py  logger.py  security.py
src/fireguard2/db/: supabase.py
src/fireguard2/services/: map_helper.py  prediction_helper.py
src/fireguard2/static/: fire_risk_map.html  login.js  logout.js
src/fireguard2/templates/: fire_risk_map.html  login.html
supabase_api_auth_example/: authenticate_user.py  create_api_client.py  jwt_utils.py  readme.md
