[project]
name = "testproj"
version = "0.1.0"
description = ""
authors = [
    {name = "Henrik",email = "602119@stud.hvl.no"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "dynamic-frcm (>=1.0.1,<2.0.0)",
    "poetry-dotenv (>=0.4.0,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
