[project]
name = "fireguardproject"
version = "0.1.0"
description = ""
authors = [
    {name = "h602620",email = "602620@stud.hvl.no"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "dynamic-frcm (>=1.0.1,<2.0.0)",
    "folium (>=0.19.4,<0.20.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
